--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -5,3 +5,8 @@
   <a>Work experience</a>
   <a>Educacional</a>
 </mat-toolbar>
+
+<mat-grid-list cols="2">
+  <mat-grid-tile>1</mat-grid-tile>
+  <mat-grid-tile>2</mat-grid-tile>
+</mat-grid-list>
