--- a/portfolio/src/app/app.component.scss
+++ b/portfolio/src/app/app.component.scss
@@ -4,7 +4,11 @@
 
 mat-toolbar {
   background-color: #000;
+  height: 9%;
   a {
+    font-family: sans-serif;
+    font-weight: 500;
+    font-size: medium;
     padding: 20px;
     color: white;
     align-items: end;
@@ -15,4 +19,10 @@ mat-toolbar {
     background-color: #fff;
     cursor: pointer;
   }
+}
+
+mat-grid-tile {
+  background: #000;
+  padding: 0%;
+  height: 100%;
 }
